query_optimizer/tests/resolver/Copy.test
# This file copyright (c) 2011-2015, Quickstep Technologies LLC.
# Copyright (c) 2015, Pivotal Software, Inc.
# All rights reserved.
# See file CREDITS.txt for details.

[default initial_logical_plan]
copy test from 'test.txt'
--
TopLevelPlan
+-plan=CopyFrom[relation=Test,file_name=test.txt,column_delimiter="\t",
| escape_strings=true]
+-output_attributes=
  +-[]
==

copy tESt from 'test.txt' with (delimiter '123')
--
ERROR: DELIMITER is not a single character (1 : 43)
copy tESt from 'test.txt' with (delimiter '123')
                                          ^
==

copy tESt from 'test.txt' with (delimiter 'd', escape_strings false)
--
TopLevelPlan
+-plan=CopyFrom[relation=Test,file_name=test.txt,column_delimiter="d",
| escape_strings=false]
+-output_attributes=
  +-[]
==

copy undefined_table from 'test.txt'
--
ERROR: Unrecognized relation undefined_table (1 : 6)
copy undefined_table from 'test.txt...
     ^
